[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = [ "serde" ]}
eframe = {version = "0.23.0", features = [
    "persistence"
]}
serde = {version = "1.0.192", features = ["derive"]}
